Grammatical and Spelling Correction

--- a/MUM-FEM-B-Team-Final.ipynb
+++ b/MUM-FEM-B-Team-Final.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "##  Introduction\n",
-    "To start working on this problem we have to do two things first. One, import various machine learning and other libraries>><p> From the plots above we can see both cats and dogs most likely has outcomes Adoption, Transfer, or Return_to_owner.</p>"
+    "To start working on this problem we have to do two things first. One, import various machine learning and other libraries"
    ]
   },
   {
@@ -324,9 +324,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see the train_data has 10 features and the test_data has only 8 features, which is due to the known *outcome* and *outcome subbtype* features in the test data. The other 8 features describbe various information about each animal. \n",
+    "As we can see the train_data has 10 features and the test_data has only 8 features, which is due to the known *outcome* and *outcome subbtype* features in the test data. The other 8 features describe various information about each animal. \n",
     "\n",
-    "Since we would like to predict probability of an animal to have a given outcome type, we should investigate the look of this feature. The following code displays a histogram of the various outcome types."
+    "Since we would like to predict probability of an animal to have a given outcome type, we should investigate how this feature looks. The following code displays a histogram of the various outcome types."
    ]
   },
   {
@@ -1193,7 +1193,7 @@
    "metadata": {},
    "source": [
     "### Name Feature\n",
-    "To start off simply we will look at the *Name* feature. The following code block lists the numbber of samples with this proerty, then prints out a portion of the list of names.  "
+    "To start off simply we will look at the *Name* feature. The following code block lists the numbber of samples with this property, then prints out a portion of the list of names.  "
    ]
   },
   {
@@ -2121,7 +2121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that within this information we not only have the time of day but also the year, month, and day. The following code block defines functins for determineing the day and time of day an outcome occurs. The time of day is grouped into five regions, Morning, Noon, Afternoon, Evening, and Night to minimze the size of uniqe values for the *TIME* feature. The block also then creates these two features in the training data."
+    "We can see that within this information we not only have the time of day but also the year, month, and day. The following code block defines functins for determining the day and time of day an outcome occurs. The time of day is grouped into five regions, Morning, Noon, Afternoon, Evening, and Night to minimze the size of uniqe values for the *TIME* feature. The block also then creates these two features in the training data."
    ]
   },
   {
@@ -4668,7 +4668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we are dealing with only have 2 different animal, cats and dogs. We now will seperate this feature into *Cat* and *Dog* features, then we plot histograms of the *Cat* and *Dog* features based upon their outcome types. "
+    "So we are dealing with only 2 different animals, cats and dogs. We now will seperate this feature into *Cat* and *Dog* features, then we plot histograms of the *Cat* and *Dog* features based upon their outcome types. "
    ]
   },
   {
@@ -5488,7 +5488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above figures we can se that dogs are more likely than cats to be adopted. As well as, dogs are much more likely to return to owner. Contrarily, for cats they are more likely to be transfer or to have died. Based upon this we believe this feature whould help us separate our data even better.\n",
+    "From the above figures we can see that dogs are more likely than cats to be adopted. As well as, dogs are much more likely to return to owner. Contrarily, for cats they are more likely to be transfer or to have died. Based upon this we believe this feature should help us separate our data even better.\n",
     "\n",
     "Before moving to the next feature, we will apply this to our test data as well."
    ]
@@ -6360,9 +6360,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based upon the above information we can divide our data into males and females, with or without intact sex organs, or not know. While there also seems to be nan values we did not see them on the histogram we will group them along with the unknown values.\n",
+    "Based upon the above information we can divide our data into males and females, with or without intact sex organs, or not know. While there also seems to be $nan$ values we did not see them on the histogram we will group them along with the unknown values.\n",
     "\n",
-    "The next code segments defines functions for determing the sex and wether an animal is neutered (Called sapyed for females) or not. Followed by appling these features to the training set."
+    "The next code segments defines functions for determing the sex and whether an animal is neutered (Called sapyed for females) or not. Followed by appling these features to the training set."
    ]
   },
   {
@@ -8094,7 +8094,7 @@
    "metadata": {},
    "source": [
     "### Age Upon Outcome\n",
-    "Moving on to our next input feature, *Age Upon Outcome*, we will look at how this divides our data. The next code snippet plots a histogram of the input feature values "
+    "Moving on to our next input feature, *Age Upon Outcome*, we will look at how this divides our data. The next code snippet plots a histogram of the input feature values."
    ]
   },
   {
@@ -9788,9 +9788,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the distribution is extremely non-uniform, we also have *nan* values in our data. To adress the *nan* values, since there are very few, we will replace them with the median of the data set. While this does modify the training data, the size of the *nan* values in this feature is small enough that his change should be negligable. Now to combat the nonuniformity we will group regions of our data corresponding to the age of the animal. \n",
+    "We can see that the distribution is extremely non-uniform, we also have $nan$ values in our data. To adress the $nan$ values, since there are very few, we will replace them with the median of the data set. While this does modify the training data, the size of the $nan$ values in this feature is small enough that his change should be negligable. Now to combat the nonuniformity we will group regions of our data corresponding to the age of the animal. \n",
     "\n",
-    "The following code blocks adress the *nan* issue followed by grouping the ages into ranges of Puppy, Adolescent, Young, Adult, and Senior. Finally a histogram is shown showing how this grouping divides our data."
+    "The following code blocks adress the $nan$ issue followed by grouping the ages into ranges of Puppy, Adolescent, Young, Adult, and Senior. Finally a histogram is shown showing how this grouping divides our data."
    ]
   },
   {
@@ -10619,7 +10619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that as age increases adoption and transfer rates decrease. Which makes sense as many individuals looking for a pet would like one that will be with them for a long time, as well as transfering younger animals will help mmet his damand elsewhere. On the other side the return to owner outcome is quite popular with adult animals and somewhat senior animals, potentially as animals age the are left at the shelter for health reasons.\n",
+    "We can see that as age increases adoption and transfer rates decrease. Which makes sense as many individuals looking for a pet would like one that will be with them for a long time, as well as transfering younger animals will help meet his demand elsewhere. On the other side the return to owner outcome is quite popular with adult animals and somewhat senior animals, this is caused potentially as animals age the are left at the shelter for health reasons.\n",
     "\n",
     "Here we apply the above process to the test data. "
    ]
@@ -10937,7 +10937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we have applied the groupings to our training data we caan now look at the histograms for each grouping."
+    "Since we have applied the groupings to our training data we can now look at the histograms for each grouping."
    ]
   },
   {
@@ -18410,7 +18410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar to the Breed, there are too many unique colors in this feature. So, we will do the same thing here as we did for the Breed. First, we produce only key-words that are repeated among all values to reduce the number of unique elements in the Color feature. Then, we will vectorize the color based on only those colors.</p>\n"
+    "Similar to the Breed, there are too many unique colors in this feature. So, we will do the same thing here as we did for the Breed. First, we produce only key-words that are repeated among all values to reduce the number of unique elements in the Color feature. Then, we will vectorize the color based on only those colors.\n"
    ]
   },
   {
@@ -18520,7 +18520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can se the shape of our data."
+    "Now we can see the shape of our data."
    ]
   },
   {
@@ -18548,10 +18548,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that we have expaned from our original 8 features to 87 different features, this hopefully allows us to predict the outcomes of the test data realtively well and realatively quickly.\n",
+    "We can see that we have expanded from our original 8 features to 87 different features, this hopefully allows us to predict the outcomes of the test data relatively well and relatively quickly.\n",
     "\n",
     "Now we can look at the differences between the two sets."
    ]
